# RAG-Attribution

./: .env.example  FIGURES_README.md  FINDINGS.md  PROJECT_DESCRIPTION.md  README.md  aggregation.ipynb  attribution_methods.py  bert_rag_exploration.ipynb  create_additional_visualizations.py  create_final_visualizations.py  create_run_visualizations.py  create_visualizations.py  data_loader.py  llama_model_guide.md  llama_token_attribution.ipynb  pyproject.toml  rag_source_attribution.ipynb  rag_system.py  run_all_experiments.py  run_attribution_experiments.py  run_whitebox_attribution_experiments.py  test.ipynb
archive/: combined_metrics_20251212_221425.csv  complementary_20251121_215107_full.json  complementary_20251121_215107_metrics.csv  complementary_20251121_215343_full.json  data.md  rag_source_attribution.ipynb  test_data_access.py
data/: complementary.csv  complementary_data.json  inverse_synergy.csv  nq_reforged_without_titles.csv  synergy_data.csv
results/: 20_complementary_20251212_221510_full.json  20_complementary_20251212_221510_metrics.csv  20_duplicate_20251212_221425_full.json  20_duplicate_20251212_221425_metrics.csv  20_synergy_20251212_222327_full.json  20_synergy_20251212_222327_metrics.csv  combined_metrics_20251212_223144.csv  complementary_20251121_213752_full.json  complementary_20251121_213752_metrics.csv  complementary_20251121_213926_full.json  complementary_20251121_213926_metrics.csv  complementary_20251121_214531_full.json  complementary_20251121_214531_metrics.csv  complementary_20251121_215343_metrics.csv  (+28 more)
visualizations/: common.py  (+3 more)
(+5 files in other folders)
